--- a/sources/verbs.yaml
+++ b/sources/verbs.yaml
@@ -1,163 +1,328 @@
+
 Travailler:
   I: Раб(о)тать
+  Я: Работаю
+  Ты: Работаешь
+  Они: Работают
 Lire:
   I: Чит(а)ть
   P: Прочит(а)ть
+  Я: Читаю
+  Ты: Читаешь
+  Они: Читают
 Regarder:
   I: Смотр(е)ть
   P: Посмотр(е)ть
+  Я: Смотрю
+  Ты: Смотришь
+  Они: Смотрят
 Écrire:
   I: Пис(а)ть
   P: Напис(а)ть
+  Я: Пишу
+  Ты: Пишешь
+  Они: Пишут
 Aimer:
   I: Люб(и)ть
   P: Полюб(и)ть
+  Я: Люблю
+  Ты: Любишь
+  Они: Любят
 Parler:
   I: Говор(и)ть
   P: Сказ(а)ть
+  Я: Говорю
+  Ты: Говоришь
+  Они: Говорят
 Vivre, habiter:
   I: Жить
   P: Пож(и)ть
+  Я: Живу
+  Ты: Живёшь
+  Они: Живут
 Se promener:
   I: Гул(я)ть
   P: Погул(я)ть
+  Я: Гуляю
+  Ты: Гуляешь
+  Они: Гуляют
 Penser:
   I: Д(у)мать
+  Я: Думаю
+  Ты: Думаешь
+  Они: Думают
 Étre debout:
   I: Сто(я)ть
+  Я: Стою
+  Ты: Стоишь
+  Они: Стоят
 Étre couché, se trouver:
   I: Леж(а)ть
+  Я: Лежу
+  Ты: Лежишь
+  Они: Лежат
 Être assis:
   I: Сид(е)ть
+  Я: Сижу
+  Ты: Сидишь
+  Они: Сидят
 Écouter:
   I: Сл(у)шать
   P: Посл(у)шать
+  Я: Слушаю
+  Ты: Слушаешь
+  Они: Слушают
 Entendre:
   I: Сл(ы)шать
   P: Усл(ы)шать
+  Я: Слышу
+  Ты: Слышишь
+  Они: Слышат
 Faire:
   I: Д(е)лать
   P: Сд(е)лать
+  Я: Делаю
+  Ты: Делаешь
+  Они: Делают
 Acheter:
   I: Покуп(а)ть
   P: Куп(и)ть
+  Я: Покупаю
+  Ты: Покупаешь
+  Они: Покупают
 Voir:
   I: В(и)деть
   P: Ув(и)деть
+  Я: Вижу
+  Ты: Видишь
+  Они: Видят
 Vouloir:
   I: Хот(е)ть
   P: Захот(е)ть
+  Я: Хочу
+  Ты: Хочешь
+  Мы: Хотим
+  Они: Хотят
 Étudier:
   I: Изуч(а)ть
   P: Изуч(и)ть
+  Я: Изучаю
+  Ты: Изучаешь
+  Они: Изучают
 Manger:
   I: Есть
   P: Съесть / По(е)сть
+  Я: Ем
+  Ты: Еш
+  Мы: Едим
+  Они: Едят
 Boire:
   I: Пить
   P: В(ы)пить / Поп(и)ть
+  Я: Пью
+  Ты: Пьёшь
+  Они: Пьют
 Savoir, connaitre:
   I: Знать
+  Я: Знаю
+  Ты: Знаешь
+  Они: Знают
 Savoir faire:
   I: Ум(е)ть
   P: Сум(е)ть
+  Я: Умею
+  Ты: Умеешь
+  Они: Умеют
 Pouvoir:
   I: Мочь
   P: Смочь
+  Я: Могу
+  Ты: Можешь
+  Они: Могут
 Être:
   I: Быть
 Aller (à pied):
   I: Идт(и)
   P: Пойт(и)
+  Я: Иду
+  Ты: Идёшь
+  Они: Идут
 Aller (à pied) .ind.:
   I: Ход(и)ть
+  Я: Хожу
+  Ты: Ходишь
+  Они: Ходят
 Comprendre:
   I: Поним(а)ть
   P: Пон(я)ть
+  Я: Понимаю
+  Ты: Понимаешь
+  Они: Понимают
 Enseigner:
   I: Уч(и)ть
   P: Науч(и)ть
+  Я: Учу
+  Ты: Учишь
+  Они: Учат
 Apprendre:
   I: Уч(и)ть
   P: В(ы)учить
+  Я: Учу
+  Ты: Учишь
+  Они: Учат
 Donner:
   I: Дав(а)ть
   P: Дать
+  Я: Даю
+  Ты: Даёшь
+  Они: Дают
 Laver:
   I: Мыть
   P: Пом(ы)ть / в(ы)мыть
+  Я: Мою
+  Ты: Моешь
+  Они: Моют
 Préparer:
   I: Гот(о)вить
   P: Пригот(о)вить
+  Я: Готовлю
+  Ты: Готовишь
+  Они: Готовят
 Dessiner:
   I: Рисов(а)ть
   P: Нарисов(а)ть
+  Я: Рисую
+  Ты: Рисуешь
+  Они: Рисуют
 Construire:
   I: Стр(о)ить
   P: Постр(о)ить
+  Я: Строю
+  Ты: Строишь
+  Они: Строят
 Se reposer:
   I: Отдых(а)ть
   P: Отдохн(у)ть
+  Я: Отдыхаю
+  Ты: Отдыхаешь
+  Они: Отдыхают
 Décider, résoudre:
   I: Реш(а)ть
   P: Реш(и)ть
+  Я: Решаю
+  Ты: Решаешь
+  Они: Решают
 Prendre:
   I: Брать
   P: Взять
+  Я: Беру
+  Ты: Берёшь
+  Они: Берут
 Commencer:
   I: Начин(а)ть
   P: Нач(а)ть
+  Я: Начинаю
+  Ты: Начинаешь
+  Они: Начинают
 Finir:
   I: Зак(а)нчивать, Конч(а)ть
   P: Зак(о)нчить, К(о)нчить
+  Я: Заканчиваю
+  Ты: Заканчиваешь
+  Они: Заканчивают
 Téléphoner:
   I: Звон(и)ть
   P: Позвон(и)ть
+  Я: Звоню
+  Ты: Звонишь
+  Они: Звонят
 Offrir:
   I: Дар(и)ть
   P: Подар(и)ть
+  Я: Дарю
+  Ты: Даришь
+  Они: Дарят
 Montrer:
   I: Пок(а)зывать
   P: Показ(а)ть
+  Я: Показываю
+  Ты: Показываешь
+  Они: Показывают
 Expliquer:
   I: Объясн(я)ть
   P: Объясн(и)ть
+  Я: Объясняю
+  Ты: Объясняешь
+  Они: Объясняют
 Chercher:
   I: Иск(а)ть
+  Я: Ищу
+  Ты: Ищешь
+  Они: Идут
 Trouver:
   P: Найт(и)
 Aider qlq:
-    I: Помог(а)ть
-    P: Пом(о)чь
+  I: Помог(а)ть
+  P: Пом(о)чь
+  Я: Помогаю
+  Ты: Помогаешь
+  Они: Помогают
 Choisir:
   I: Выбир(а)ть
   P: В(ы)брать
+  Я: Выбираю
+  Ты: Выбираешь
+  Они: Выбирают
 Continuer:
   I: Продолж(а)ть
   P: прод(о)лжить
+  Я: Продолжаю
+  Ты: Продолжаешь
+  Они: Продолжают
 Dormir:
   I: Спать
   P: Посп(а)ть
+  Я: Сплю
+  Ты: Спишь
+  Они: Спят
 S'occuper de, faire:
   I: Заним(а)ться
   P: Зан(я)ться
+  Я: Занимаюсь
+  Ты: Занимаешься
+  Они: Занимаются
 Jouer:
   I: Игр(а)ть
   P: Сыгр(а)ть
+  Я: Играю
+  Ты: Играешь
+  Они: Играют
 Utiliser:
   I: П(о)льзоваться
   P: Исп(о)льзовать
+  Я: Пользуюсь
+  Ты: Пользуешься
+  Они: Ползуются
 Tuer:
   I: Убив(а)ть
   P: Уб(и)ть
+  Я: Убиваю
+  Ты: Убиваешь
+  Они: Убивают
 Petit-déjeuner:
   I: З(а)втракать
   P: Поз(а)втракать
 Couter:
   I: Ст(о)ить
+  Я: Стою
+  Ты: Стоишь
+  Они: Стоят
 Aller /en transport:
   I: (Е)хать
   P: По(е)хать
+  Я: Еду
+  Ты: Едешь
+  Они: Едут
 Mélanger, mixer:
   I: Перем(е)шивать
   P: Перемеш(а)ть
@@ -170,11 +335,20 @@ Mesurer:
 Ouvrir:
   I: Откр(ы)ть
   P: Открыв(а)ть
+  Я: Открою
+  Ты: Откроешь
+  Они: Откроют
 Couper:
   I: Р(е)зать
   P: Нар(е)зать
+  Я: Режу
+  Ты: Режешь
+  Они: Режут
 Venir de, arriver de:
   I: Приход(и)ть
   P: Прийт(и)
+  Я: Прихожу
+  Ты: Приложишь
+  Они: Приходят
 Discuter:
   I: Разгов(а)ривать
