--- a/sources/adjectives.yaml
+++ b/sources/adjectives.yaml
@@ -1,8 +1,4 @@
-Petit:
-  M: М(а)ленький
-  N: М(а)ленькое
-  F: М(а)ленькая
-  P: М(а)ленькие
+Petit: М(а)ленький
 Grand: Больш(о)й
 Rouge: Кр(а)сный
 Noir: Чёрный
