--- a/sources/adverbs.yaml
+++ b/sources/adverbs.yaml
@@ -22,6 +22,8 @@ Rarement: Р(е)дко
 Jamais: Никогд(а)
 Toujours: Всегд(а)
 Longtemps: Д(о)лго
+Il y a longtemps que: Давн(о)
+Il n'y a pas longtemps que: Не так давн(о)
 Vite: Б(ы)сtро
 Pourquoi: Почем(у)
 Allez!: Дав(а)й
@@ -41,7 +43,9 @@ Au dessus: Над
 Au dessous: Под
 Devant: П(е)ред
 Derrière: За
-À côté de: Рядом с
-Quel: Какой
-Où, destination: Куда
-D'où: Откуда
+À côté de: Р(я)дом с
+Quel: Как(о)й
+Où, destination: Куд(а)
+D'où: Отк(у)да
+Maintenant 2: Теп(е)рь
+D'abord, dès le début: Снач(а)ла
