--- a/sources/other.yaml
+++ b/sources/other.yaml
@@ -29,3 +29,12 @@ Tout:
 Rien: Ничег(о)
 Avec: С / Со
 Pour: Чт(о)бы
+Quel, lequel: Кот(о)рый
+Là, là bas: Там
+Ainsi: Так
+Donc, c'est dont que: Зн(а)чит
+Devoir:
+  M: Должен
+  N: Должно
+  F: Должна
+  P: Должны
