--- a/sources/vocabulary.yaml
+++ b/sources/vocabulary.yaml
@@ -636,3 +636,15 @@ Séchresse:
 Chaussure:
   F: (О)бувь
   P: (О)буви
+Entreprise:
+  F: Ф(и)рма
+Squash:
+  M: Сквош
+Enveloppe:
+  M: Конв(е)рт
+Avion:
+  M: Самолёт
+Airbus:
+  M: Аэр(о)бус
+Cheminée:
+  F: Кам(и)нa
