--- a/sources/adverbs.yaml
+++ b/sources/adverbs.yaml
@@ -28,7 +28,8 @@ Vite: Б(ы)сtро
 Pourquoi: Почем(у)
 Allez!: Дав(а)й
 Avant: Р(а)ньше
-Après: Пот(о)м
+Après, plus tard: Пот(о)м
+Après: П(о)сле
 Ici: Здесь
 Enfin: Након(е)ц
 Dommage: Жаль
