--- a/sources/adjectives.yaml
+++ b/sources/adjectives.yaml
@@ -43,7 +43,7 @@ Autre, différent: друг(о)й
 Loin: далёкий
 Violet: Фиол(е)товый
 Rose: Р(о)зовый
-Dernier (ordre): Посл(е)дний
+Dernier (latest): Посл(е)дний
 Dernier (précédent): Пр(о)шлый
 Suivant: Сл(е)дующий
 Léger: Лёгкий
