--- a/sources/verbs.yaml
+++ b/sources/verbs.yaml
@@ -261,6 +261,9 @@ Chercher:
   Они: Идут
 Trouver:
   P: Найт(и)
+  Я: Найд(у)
+  Ты: Найдёшь
+  Они: Найд(у)т
 Aider qlq:
   I: Помог(а)ть
   P: Пом(о)чь
@@ -352,3 +355,29 @@ Venir de, arriver de:
   Они: Приходят
 Discuter:
   I: Разгов(а)ривать
+Changer:
+  I: Измен(и)ть
+  P: Мен(я)ть
+  Я: Изм(е)ню
+  Ты: Изм(е)нишь
+  Они: Изм(е)нят
+Perdre:
+  I: Тер(я)ть
+  P: Потер(я)ть
+  Я: Тер(я)ю
+  Ты: Тер(я)ешь
+  Они: Тер(я)ют
+
+
+найду́	нашёл
+нашла́	 —
+Ты	найдёшь	нашёл
+нашла́	найди́
+Он
+Она
+Оно	найдёт	нашёл
+нашла́
+нашло́	 —
+Мы	найдём	нашли́	 —
+Вы	найдёте	нашли́	найди́те
+Они	найду́т	нашли́
