--- a/sources/other.yaml
+++ b/sources/other.yaml
@@ -28,7 +28,8 @@ Tout:
   P: Все
 Rien: Ничег(о)
 Avec: С / Со
-Pour: Чт(о)бы
+Pour (in order to): Чт(о)бы
+Pour: Для
 Quel, lequel: Кот(о)рый
 Là, là bas: Там
 Ainsi: Так
