--- a/sources/adjectives.yaml
+++ b/sources/adjectives.yaml
@@ -62,4 +62,4 @@ Bon, délicieux: Вк(у)сный
 Large: Шир(о)кий
 Profond: Глуб(о)кий
 Propre, le sien: С(о)бственный
-Célèbre: Просл(a)вленный
+Célèbre: Изв(е)стный, знамен(и)тый
