--- a/sources/vocabulary.yaml
+++ b/sources/vocabulary.yaml
@@ -630,12 +630,12 @@ Pays:
 Artiste:
   M: Худ(о)жник
 Boîte, coffre:
-  M: (Я)шик
+  M: (Я)щик
 Séchresse:
   F: З(а)суха
 Chaussure:
   F: (О)бувь
-  P: (О)буви
+  P: (О)бувь
 Entreprise:
   F: Ф(и)рма
 Squash:
@@ -647,7 +647,7 @@ Avion:
 Airbus:
   M: Аэр(о)бус
 Cheminée:
-  F: Кам(и)нa
+  M: Кам(и)н
 Nouvelle, information:
   F: Н(о)вость
   P: Н(о)вости
