--- a/sources/other.yaml
+++ b/sources/other.yaml
@@ -34,9 +34,11 @@ Quel, lequel: Кот(о)рый
 Là, là bas: Там
 Ainsi: Так
 Donc, c'est dont que: Зн(а)чит
+Alors, dans ce cas là: Тогд(а)
 Devoir:
   M: Должен
   N: Должно
   F: Должна
   P: Должны
 Etc.: и т.п.
+Proche de: Недалек(о)
