--- a/sources/verbs.yaml
+++ b/sources/verbs.yaml
@@ -367,3 +367,14 @@ Perdre:
   Я: Тер(я)ю
   Ты: Тер(я)ешь
   Они: Тер(я)ют
+Faire tomber:
+  P: Урон(и)ть
+  Я: Урон(ю)
+  Ты: Ур(о)нишь
+  Они: Ур(о)нят
+Demander:
+  I: Прос(и)ть
+  P: Попрос(и)ть
+  Я: Прош(у)
+  Ты: Пр(о)сишь
+  Они: Пр(о)сят
