--- a/sources/verbs.yaml
+++ b/sources/verbs.yaml
@@ -1,331 +1,331 @@
 
 Travailler:
   I: Раб(о)тать
-  Я: Работаю
-  Ты: Работаешь
-  Они: Работают
+  1: Работаю
+  2: Работаешь
+  6: Работают
 Lire:
   I: Чит(а)ть
   P: Прочит(а)ть
-  Я: Читаю
-  Ты: Читаешь
-  Они: Читают
+  1: Читаю
+  2: Читаешь
+  6: Читают
 Regarder:
   I: Смотр(е)ть
   P: Посмотр(е)ть
-  Я: Смотрю
-  Ты: Смотришь
-  Они: Смотрят
+  1: Смотрю
+  2: Смотришь
+  6: Смотрят
 Écrire:
   I: Пис(а)ть
   P: Напис(а)ть
-  Я: Пишу
-  Ты: Пишешь
-  Они: Пишут
+  1: Пишу
+  2: Пишешь
+  6: Пишут
 Aimer:
   I: Люб(и)ть
   P: Полюб(и)ть
-  Я: Люблю
-  Ты: Любишь
-  Они: Любят
+  1: Люблю
+  2: Любишь
+  6: Любят
 Parler:
   I: Говор(и)ть
   P: Сказ(а)ть
-  Я: Говорю
-  Ты: Говоришь
-  Они: Говорят
+  1: Говорю
+  2: Говоришь
+  6: Говорят
 Vivre, habiter:
   I: Жить
   P: Пож(и)ть
-  Я: Живу
-  Ты: Живёшь
-  Они: Живут
+  1: Живу
+  2: Живёшь
+  6: Живут
 Se promener:
   I: Гул(я)ть
   P: Погул(я)ть
-  Я: Гуляю
-  Ты: Гуляешь
-  Они: Гуляют
+  1: Гуляю
+  2: Гуляешь
+  6: Гуляют
 Penser:
   I: Д(у)мать
-  Я: Думаю
-  Ты: Думаешь
-  Они: Думают
+  1: Думаю
+  2: Думаешь
+  6: Думают
 Étre debout:
   I: Сто(я)ть
-  Я: Стою
-  Ты: Стоишь
-  Они: Стоят
+  1: Стою
+  2: Стоишь
+  6: Стоят
 Étre couché, se trouver:
   I: Леж(а)ть
-  Я: Лежу
-  Ты: Лежишь
-  Они: Лежат
+  1: Лежу
+  2: Лежишь
+  6: Лежат
 Être assis:
   I: Сид(е)ть
-  Я: Сижу
-  Ты: Сидишь
-  Они: Сидят
+  1: Сижу
+  2: Сидишь
+  6: Сидят
 Écouter:
   I: Сл(у)шать
   P: Посл(у)шать
-  Я: Слушаю
-  Ты: Слушаешь
-  Они: Слушают
+  1: Слушаю
+  2: Слушаешь
+  6: Слушают
 Entendre:
   I: Сл(ы)шать
   P: Усл(ы)шать
-  Я: Слышу
-  Ты: Слышишь
-  Они: Слышат
+  1: Слышу
+  2: Слышишь
+  6: Слышат
 Faire:
   I: Д(е)лать
   P: Сд(е)лать
-  Я: Делаю
-  Ты: Делаешь
-  Они: Делают
+  1: Делаю
+  2: Делаешь
+  6: Делают
 Acheter:
   I: Покуп(а)ть
   P: Куп(и)ть
-  Я: Покупаю
-  Ты: Покупаешь
-  Они: Покупают
+  1: Покупаю
+  2: Покупаешь
+  6: Покупают
 Voir:
   I: В(и)деть
   P: Ув(и)деть
-  Я: Вижу
-  Ты: Видишь
-  Они: Видят
+  1: Вижу
+  2: Видишь
+  6: Видят
 Vouloir:
   I: Хот(е)ть
   P: Захот(е)ть
-  Я: Хочу
-  Ты: Хочешь
+  1: Хочу
+  2: Хочешь
   Мы: Хотим
-  Они: Хотят
+  6: Хотят
 Étudier:
   I: Изуч(а)ть
   P: Изуч(и)ть
-  Я: Изучаю
-  Ты: Изучаешь
-  Они: Изучают
+  1: Изучаю
+  2: Изучаешь
+  6: Изучают
 Manger:
   I: Есть
   P: Съесть / По(е)сть
-  Я: Ем
-  Ты: Еш
+  1: Ем
+  2: Еш
   Мы: Едим
-  Они: Едят
+  6: Едят
 Boire:
   I: Пить
   P: В(ы)пить / Поп(и)ть
-  Я: Пью
-  Ты: Пьёшь
-  Они: Пьют
+  1: Пью
+  2: Пьёшь
+  6: Пьют
 Savoir, connaitre:
   I: Знать
-  Я: Знаю
-  Ты: Знаешь
-  Они: Знают
+  1: Знаю
+  2: Знаешь
+  6: Знают
 Savoir faire:
   I: Ум(е)ть
   P: Сум(е)ть
-  Я: Умею
-  Ты: Умеешь
-  Они: Умеют
+  1: Умею
+  2: Умеешь
+  6: Умеют
 Pouvoir:
   I: Мочь
   P: Смочь
-  Я: Могу
-  Ты: Можешь
-  Они: Могут
+  1: Могу
+  2: Можешь
+  6: Могут
 Être:
   I: Быть
 Aller (à pied):
   I: Идт(и)
   P: Пойт(и)
-  Я: Иду
-  Ты: Идёшь
-  Они: Идут
+  1: Иду
+  2: Идёшь
+  6: Идут
 Aller (à pied) .ind.:
   I: Ход(и)ть
-  Я: Хожу
-  Ты: Ходишь
-  Они: Ходят
+  1: Хожу
+  2: Ходишь
+  6: Ходят
 Comprendre:
   I: Поним(а)ть
   P: Пон(я)ть
-  Я: Понимаю
-  Ты: Понимаешь
-  Они: Понимают
+  1: Понимаю
+  2: Понимаешь
+  6: Понимают
 Enseigner:
   I: Уч(и)ть
   P: Науч(и)ть
-  Я: Учу
-  Ты: Учишь
-  Они: Учат
+  1: Учу
+  2: Учишь
+  6: Учат
 Apprendre:
   I: Уч(и)ть
   P: В(ы)учить
-  Я: Учу
-  Ты: Учишь
-  Они: Учат
+  1: Учу
+  2: Учишь
+  6: Учат
 Donner:
   I: Дав(а)ть
   P: Дать
-  Я: Даю
-  Ты: Даёшь
-  Они: Дают
+  1: Даю
+  2: Даёшь
+  6: Дают
 Laver:
   I: Мыть
   P: Пом(ы)ть / в(ы)мыть
-  Я: Мою
-  Ты: Моешь
-  Они: Моют
+  1: Мою
+  2: Моешь
+  6: Моют
 Préparer:
   I: Гот(о)вить
   P: Пригот(о)вить
-  Я: Готовлю
-  Ты: Готовишь
-  Они: Готовят
+  1: Готовлю
+  2: Готовишь
+  6: Готовят
 Dessiner:
   I: Рисов(а)ть
   P: Нарисов(а)ть
-  Я: Рисую
-  Ты: Рисуешь
-  Они: Рисуют
+  1: Рисую
+  2: Рисуешь
+  6: Рисуют
 Construire:
   I: Стр(о)ить
   P: Постр(о)ить
-  Я: Строю
-  Ты: Строишь
-  Они: Строят
+  1: Строю
+  2: Строишь
+  6: Строят
 Se reposer:
   I: Отдых(а)ть
   P: Отдохн(у)ть
-  Я: Отдыхаю
-  Ты: Отдыхаешь
-  Они: Отдыхают
+  1: Отдыхаю
+  2: Отдыхаешь
+  6: Отдыхают
 Décider, résoudre:
   I: Реш(а)ть
   P: Реш(и)ть
-  Я: Решаю
-  Ты: Решаешь
-  Они: Решают
+  1: Решаю
+  2: Решаешь
+  6: Решают
 Prendre:
   I: Брать
   P: Взять
-  Я: Беру
-  Ты: Берёшь
-  Они: Берут
+  1: Беру
+  2: Берёшь
+  6: Берут
 Commencer:
   I: Начин(а)ть
   P: Нач(а)ть
-  Я: Начинаю
-  Ты: Начинаешь
-  Они: Начинают
+  1: Начинаю
+  2: Начинаешь
+  6: Начинают
 Finir:
   I: Зак(а)нчивать, Конч(а)ть
   P: Зак(о)нчить, К(о)нчить
-  Я: Заканчиваю
-  Ты: Заканчиваешь
-  Они: Заканчивают
+  1: Заканчиваю
+  2: Заканчиваешь
+  6: Заканчивают
 Téléphoner:
   I: Звон(и)ть
   P: Позвон(и)ть
-  Я: Звоню
-  Ты: Звонишь
-  Они: Звонят
+  1: Звоню
+  2: Звонишь
+  6: Звонят
 Offrir:
   I: Дар(и)ть
   P: Подар(и)ть
-  Я: Дарю
-  Ты: Даришь
-  Они: Дарят
+  1: Дарю
+  2: Даришь
+  6: Дарят
 Montrer:
   I: Пок(а)зывать
   P: Показ(а)ть
-  Я: Показываю
-  Ты: Показываешь
-  Они: Показывают
+  1: Показываю
+  2: Показываешь
+  6: Показывают
 Expliquer:
   I: Объясн(я)ть
   P: Объясн(и)ть
-  Я: Объясняю
-  Ты: Объясняешь
-  Они: Объясняют
+  1: Объясняю
+  2: Объясняешь
+  6: Объясняют
 Chercher:
   I: Иск(а)ть
-  Я: Ищу
-  Ты: Ищешь
-  Они: Идут
+  1: Ищу
+  2: Ищешь
+  6: Идут
 Trouver:
   P: Найт(и)
-  Я: Найд(у)
-  Ты: Найдёшь
-  Они: Найд(у)т
+  1: Найд(у)
+  2: Найдёшь
+  6: Найд(у)т
 Aider qlq:
   I: Помог(а)ть
   P: Пом(о)чь
-  Я: Помогаю
-  Ты: Помогаешь
-  Они: Помогают
+  1: Помогаю
+  2: Помогаешь
+  6: Помогают
 Choisir:
   I: Выбир(а)ть
   P: В(ы)брать
-  Я: Выбираю
-  Ты: Выбираешь
-  Они: Выбирают
+  1: Выбираю
+  2: Выбираешь
+  6: Выбирают
 Continuer:
   I: Продолж(а)ть
   P: прод(о)лжить
-  Я: Продолжаю
-  Ты: Продолжаешь
-  Они: Продолжают
+  1: Продолжаю
+  2: Продолжаешь
+  6: Продолжают
 Dormir:
   I: Спать
   P: Посп(а)ть
-  Я: Сплю
-  Ты: Спишь
-  Они: Спят
+  1: Сплю
+  2: Спишь
+  6: Спят
 S'occuper de, faire:
   I: Заним(а)ться
   P: Зан(я)ться
-  Я: Занимаюсь
-  Ты: Занимаешься
-  Они: Занимаются
+  1: Занимаюсь
+  2: Занимаешься
+  6: Занимаются
 Jouer:
   I: Игр(а)ть
   P: Сыгр(а)ть
-  Я: Играю
-  Ты: Играешь
-  Они: Играют
+  1: Играю
+  2: Играешь
+  6: Играют
 Utiliser:
   I: П(о)льзоваться
   P: Исп(о)льзовать
-  Я: Пользуюсь
-  Ты: Пользуешься
-  Они: Ползуются
+  1: Пользуюсь
+  2: Пользуешься
+  6: Ползуются
 Tuer:
   I: Убив(а)ть
   P: Уб(и)ть
-  Я: Убиваю
-  Ты: Убиваешь
-  Они: Убивают
+  1: Убиваю
+  2: Убиваешь
+  6: Убивают
 Petit-déjeuner:
   I: З(а)втракать
   P: Поз(а)втракать
 Couter:
   I: Ст(о)ить
-  Я: Стою
-  Ты: Стоишь
-  Они: Стоят
+  1: Стою
+  2: Стоишь
+  6: Стоят
 Aller /en transport:
   I: (Е)хать
   P: По(е)хать
-  Я: Еду
-  Ты: Едешь
-  Они: Едут
+  1: Еду
+  2: Едешь
+  6: Едут
 Mélanger, mixer:
   I: Перем(е)шивать
   P: Перемеш(а)ть
@@ -338,43 +338,41 @@ Mesurer:
 Ouvrir:
   I: Откр(ы)ть
   P: Открыв(а)ть
-  Я: Открою
-  Ты: Откроешь
-  Они: Откроют
+  1: Открою
+  2: Откроешь
+  6: Откроют
 Couper:
   I: Р(е)зать
   P: Нар(е)зать
-  Я: Режу
-  Ты: Режешь
-  Они: Режут
+  1: Режу
+  2: Режешь
+  6: Режут
 Venir de, arriver de:
   I: Приход(и)ть
   P: Прийт(и)
-  Я: Прихожу
-  Ты: Приложишь
-  Они: Приходят
+  1: Прихожу
+  2: Приложишь
+  6: Приходят
 Discuter:
   I: Разгов(а)ривать
 Changer:
   I: Измен(и)ть
   P: Мен(я)ть
-  Я: Изм(е)ню
-  Ты: Изм(е)нишь
-  Они: Изм(е)нят
+  1: Изм(е)ню
+  2: Изм(е)нишь
+  6: Изм(е)нят
 Perdre:
   I: Тер(я)ть
   P: Потер(я)ть
-  Я: Тер(я)ю
-  Ты: Тер(я)ешь
-  Они: Тер(я)ют
+  1: Тер(я)ю
+  2: Тер(я)ешь
+  6: Тер(я)ют
 Faire tomber:
+  I: ???
   P: Урон(и)ть
-  Я: Урон(ю)
-  Ты: Ур(о)нишь
-  Они: Ур(о)нят
 Demander:
   I: Прос(и)ть
   P: Попрос(и)ть
-  Я: Прош(у)
-  Ты: Пр(о)сишь
-  Они: Пр(о)сят
+  1: Прош(у)
+  2: Пр(о)сишь
+  6: Пр(о)сят
