--- a/sources/verbs.yaml
+++ b/sources/verbs.yaml
@@ -370,9 +370,33 @@ Perdre:
 Faire tomber:
   I: ???
   P: Урон(и)ть
-Demander:
+Ask sb for sth:
   I: Прос(и)ть
   P: Попрос(и)ть
   1: Прош(у)
   2: Пр(о)сишь
   6: Пр(о)сят
+Ask sb about sth:
+  I: Спраш(и)вать
+  P: Спрос(и)ть
+  1: Спр(а)шиваю
+  2: Спр(а)шиваешь
+  6: Спр(а)шивают
+Oublier:
+  I: Забыв(а)ть
+  P: Заб(ы)ть
+  1: Забыв(а)ю
+  2: Забыв(а)ешь
+  6: Забыв(а)ют
+Enseigner:
+  I: Преподав(а)ть
+  P: Препод(а)ть
+  1: Препода(ю)
+  2: Преподаёшь
+  6: Препода(ю)т
+Rendre, re-donner:
+  I: Отдав(а)ть
+  P: Отд(а)ть
+  1: Отда(ю)
+  2: Отдаёшь
+  6: Отда(ю)т
