--- a/sources/adverbs.yaml
+++ b/sources/adverbs.yaml
@@ -25,7 +25,7 @@ Longtemps: Д(о)лго
 Il y a longtemps que: Давн(о)
 Il n'y a pas longtemps que: Не так давн(о)
 Vite: Б(ы)сtро
-Pourquoi: Почем(у)
+Pourquoi: Почем(у), Зач(е)м
 Allez!: Дав(а)й
 Avant: Р(а)ньше
 Après, plus tard: Пот(о)м
