--- a/sources/verbs.yaml
+++ b/sources/verbs.yaml
@@ -388,7 +388,7 @@ Oublier:
   1: Забыв(а)ю
   2: Забыв(а)ешь
   6: Забыв(а)ют
-Enseigner:
+Enseigner2:
   I: Преподав(а)ть
   P: Препод(а)ть
   1: Препода(ю)
