--- a/sources/adverbs.yaml
+++ b/sources/adverbs.yaml
@@ -30,7 +30,7 @@ Allez!: Дав(а)й
 Avant: Р(а)ньше
 Après, plus tard: Пот(о)м
 Après: П(о)сле
-Ici: Здесь
+Ici: Здесь, Тут
 Enfin: Након(е)ц
 Dommage: Жаль
 Pas longtemps: Нед(о)лго
@@ -45,8 +45,11 @@ Au dessous: Под
 Devant: П(е)ред
 Derrière: За
 À côté de: Р(я)дом с
-Quel: Как(о)й
 Où, destination: Куд(а)
 D'où: Отк(у)да
 Maintenant 2: Теп(е)рь
 D'abord, dès le début: Снач(а)ла
+À, jusqu'à, avant: До
+Ago: Наз(а)д
+Dans //x temps: Ч(е)рез
+Ni: Ни
