--- a/sources/other.yaml
+++ b/sources/other.yaml
@@ -30,7 +30,7 @@ Rien: Ничег(о)
 Avec: С / Со
 Pour (in order to): Чт(о)бы
 Pour: Для
-Quel, lequel: Кот(о)рый
+Quel, lequel: Кот(о)рый, Как(о)й
 Là, là bas: Там
 Ainsi: Так
 Donc, c'est donc que: Зн(а)чит
