--- a/sources/verbs.yaml
+++ b/sources/verbs.yaml
@@ -400,3 +400,27 @@ Rendre, re-donner:
   1: Отда(ю)
   2: Отдаёшь
   6: Отда(ю)т
+Visiter:
+  I: Посещ(а)ть
+  P: Посет(и)ть
+  1: Посещ(а)ю
+  2: Посещ(а)ешь
+  6: Посещ(а)ют
+Naître:
+  I: Рожд(а)ться
+  P: Род(и)ться
+  1: Рожд(а)юсь
+  2: Рожд(а)ешься
+  6: Рожд(а)ются
+Mourir:
+  I: Умир(а)ть
+  P: Умер(е)ть
+  1: Умир(а)ю
+  2: Умир(а)ет
+  6: Умир(а)ют
+Dive, nager sous l'eau:
+  I: Ныр(я)ть
+  P: Нырн(у)ть
+  1: Ныр(я)ю
+  2: Ныр(я)ешь
+  6: Ныр(я)ют
