--- a/sources/vocabulary.yaml
+++ b/sources/vocabulary.yaml
@@ -660,3 +660,11 @@ Prévision:
   M: Прогн(о)з
 Météo:
   F: Пог(о)да
+Voyage:
+  N: Путеш(е)ствие
+Cathédrale:
+  M: Собор
+Taxi:
+  N: Такси
+Visite:
+  M: Виз(и)т
