--- a/sources/verbs.yaml
+++ b/sources/verbs.yaml
@@ -424,3 +424,9 @@ Dive, nager sous l'eau:
   1: Ныр(я)ю
   2: Ныр(я)ешь
   6: Ныр(я)ют
+Mettre:
+  I: Ст(а)вить
+  P: Пост(а)вить
+  1: Ст(а)влю
+  2: Ст(а)вишь
+  6: Ст(а)вят
