--- a/sources/verbs.yaml
+++ b/sources/verbs.yaml
@@ -430,3 +430,15 @@ Mettre:
   1: Ст(а)влю
   2: Ст(а)вишь
   6: Ст(а)вят
+Fermer:
+  I: Закрыв(а)ть
+  P: Закр(ы)ть
+  1: Закрыв(а)ю
+  2: Закрыв(а)ешь
+  6: Закрыв(а)ют
+Arriver par les airs:
+  I: Прилет(а)ть
+  P: Прилет(е)ть
+  1: Прилетаю
+  2: Прилетаешь
+  6: Прилетают
