--- a/sources/other.yaml
+++ b/sources/other.yaml
@@ -51,3 +51,6 @@ Pas encore: Пока ещё
 Parce que: Потому что
 Donc: Потому
 Le même: Один и тот же
+Je suis content que: Я рад что
+Je ne suis pas content que: Я не рад что
+Pendant, durant : В течение + gen.
