--- a/sources/sentences.yaml
+++ b/sources/sentences.yaml
@@ -16,3 +16,4 @@ J'ai envie de..: Мне х(о)чется
 Il me semble que..: Мне к(а)жется
 Chaque matin: По утр(а)м
 Chaque soir: По вечер(а)м
+Bravo!: Молод(е)ц!
