--- a/sources/verbs.yaml
+++ b/sources/verbs.yaml
@@ -442,3 +442,9 @@ Arriver par les airs:
   1: Прилетаю
   2: Прилетаешь
   6: Прилетают
+Préférer:
+  I: Предпочит(а)ть
+  P: Предпоч(е)сть
+  1: Предпочит(а)ю
+  2: Предпочит(а)ешь
+  6: Предпочит(а)ют
