--- a/sources/verbs.yaml
+++ b/sources/verbs.yaml
@@ -48,6 +48,7 @@ Se promener:
   6: Гуляют
 Penser:
   I: Д(у)мать
+  P: Под(у)мать
   1: Думаю
   2: Думаешь
   6: Думают
@@ -113,9 +114,9 @@ Manger:
   I: Есть
   P: Съесть / По(е)сть
   1: Ем
-  2: Еш
-  Мы: Едим
-  6: Едят
+  2: Ешь
+  Мы: Ед(и)м
+  6: Ед(я)т
 Boire:
   I: Пить
   P: В(ы)пить / Поп(и)ть
@@ -136,9 +137,9 @@ Savoir faire:
 Pouvoir:
   I: Мочь
   P: Смочь
-  1: Могу
-  2: Можешь
-  6: Могут
+  1: Мог(у)
+  2: М(о)жешь
+  6: М(о)гут
 Être:
   I: Быть
 Aller (à pied):
@@ -149,9 +150,9 @@ Aller (à pied):
   6: Идут
 Aller (à pied) .ind.:
   I: Ход(и)ть
-  1: Хожу
-  2: Ходишь
-  6: Ходят
+  1: Хож(у)
+  2: Х(о)дишь
+  6: Х(о)дят
 Comprendre:
   I: Поним(а)ть
   P: Пон(я)ть
@@ -215,9 +216,9 @@ Décider, résoudre:
 Prendre:
   I: Брать
   P: Взять
-  1: Беру
+  1: Бер(у)
   2: Берёшь
-  6: Берут
+  6: Бер(у)т
 Commencer:
   I: Начин(а)ть
   P: Нач(а)ть
@@ -233,15 +234,15 @@ Finir:
 Téléphoner:
   I: Звон(и)ть
   P: Позвон(и)ть
-  1: Звоню
-  2: Звонишь
-  6: Звонят
+  1: Звон(ю)
+  2: Звон(и)шь
+  6: Звон(я)т
 Offrir:
   I: Дар(и)ть
   P: Подар(и)ть
-  1: Дарю
-  2: Даришь
-  6: Дарят
+  1: Дар(ю)
+  2: Д(а)ришь
+  6: Д(а)рят
 Montrer:
   I: Пок(а)зывать
   P: Показ(а)ть
@@ -256,14 +257,15 @@ Expliquer:
   6: Объясняют
 Chercher:
   I: Иск(а)ть
-  1: Ищу
-  2: Ищешь
-  6: Идут
+  1: Ищ(у)
+  2: (И)щешь
+  6: (И)щут
 Trouver:
+  I: Наход(и)ть
   P: Найт(и)
-  1: Найд(у)
-  2: Найдёшь
-  6: Найд(у)т
+  1: Нахож(у)
+  2: Наход(и)шь
+  6: Наход(я)т
 Aider qlq:
   I: Помог(а)ть
   P: Пом(о)чь
@@ -305,7 +307,7 @@ Utiliser:
   P: Исп(о)льзовать
   1: Пользуюсь
   2: Пользуешься
-  6: Ползуются
+  6: Пользуются
 Tuer:
   I: Убив(а)ть
   P: Уб(и)ть
@@ -338,9 +340,9 @@ Mesurer:
 Ouvrir:
   I: Откр(ы)ть
   P: Открыв(а)ть
-  1: Открою
-  2: Откроешь
-  6: Откроют
+  1: Откр(о)ю
+  2: Откр(о)ешь
+  6: Откр(о)ют
 Couper:
   I: Р(е)зать
   P: Нар(е)зать
@@ -350,17 +352,17 @@ Couper:
 Venir de, arriver de:
   I: Приход(и)ть
   P: Прийт(и)
-  1: Прихожу
-  2: Приложишь
-  6: Приходят
+  1: Прихож(у)
+  2: Прих(о)дишь
+  6: Прих(о)дят
 Discuter:
   I: Разгов(а)ривать
 Changer:
-  I: Измен(и)ть
-  P: Мен(я)ть
-  1: Изм(е)ню
-  2: Изм(е)нишь
-  6: Изм(е)нят
+  I: Мен(я)ть
+  P: Измен(и)ть
+  1: Меняю
+  2: Меняешь
+  6: Меняют
 Perdre:
   I: Тер(я)ть
   P: Потер(я)ть
@@ -368,8 +370,11 @@ Perdre:
   2: Тер(я)ешь
   6: Тер(я)ют
 Faire tomber:
-  I: ???
+  I: Рон(я)ть
   P: Урон(и)ть
+  1: Роняю
+  2: Роняешь
+  6: Роняют
 Ask sb for sth:
   I: Прос(и)ть
   P: Попрос(и)ть
