--- a/sources/verbs.yaml
+++ b/sources/verbs.yaml
@@ -264,8 +264,8 @@ Trouver:
   I: Наход(и)ть
   P: Найт(и)
   1: Нахож(у)
-  2: Наход(и)шь
-  6: Наход(я)т
+  2: Нах(о)дишь
+  6: Нах(о)дят
 Aider qlq:
   I: Помог(а)ть
   P: Пом(о)чь
