--- a/sources/adjectives.yaml
+++ b/sources/adjectives.yaml
@@ -64,3 +64,4 @@ Profond: Глуб(о)кий
 Propre, le sien: С(о)бственный
 Célèbre: Изв(е)стный, знамен(и)тый
 Même, identique: Один(а)ковый
+Campagnard: Дерев(е)нский
