--- a/sources/other.yaml
+++ b/sources/other.yaml
@@ -44,7 +44,7 @@ Etc.: и т.п.
 Proche de: Недалек(о)
 Ou: Или
 Si: ли
-Chez: К
+Vers, du côté de, chez: К / Ко
 Quelqu'un: Кто-то Кто-нибудь
 Quelque chose: что-то что-нибудь
 Pas encore: Пока ещё
@@ -53,4 +53,4 @@ Donc: Потому
 Le même: Один и тот же
 Je suis content que: Я рад что
 Je ne suis pas content que: Я не рад что
-Pendant, durant : В течение + gen.
+Pendant, durant : В течение (+gen)
