--- a/sources/sentences.yaml
+++ b/sources/sentences.yaml
@@ -17,3 +17,7 @@ Il me semble que..: Мне к(а)жется
 Chaque matin: По утр(а)м
 Chaque soir: По вечер(а)м
 Bravo!: Молод(е)ц!
+Sauter en parachute: Пр(ы)гнуть с парашютом
+Qu'est ce qu'il fait froid !: Как х(о)ладно!
+Je me sens mal: Мне пл(о)хо
+Je suis fatigué: Я уст(а)л
