--- a/sources/verbs.yaml
+++ b/sources/verbs.yaml
@@ -441,15 +441,79 @@ Fermer:
   1: Закрыв(а)ю
   2: Закрыв(а)ешь
   6: Закрыв(а)ют
-Arriver par les airs:
-  I: Прилет(а)ть
-  P: Прилет(е)ть
-  1: Прилетаю
-  2: Прилетаешь
-  6: Прилетают
 Préférer:
   I: Предпочит(а)ть
   P: Предпоч(е)сть
   1: Предпочит(а)ю
   2: Предпочит(а)ешь
   6: Предпочит(а)ют
+Consiste en, se compose de:
+  I: Состо(я)ть из (+Gen)
+  1: Состо(ю)
+  2: Состо(и)шь
+  6: Состо(я)т
+Filmer:
+  I: Сним(а)ть
+  P: Снять
+  1: Сним(а)ю
+  2: Сним(а)ешь
+  6: Сним(а)ют
+Se filmer:
+  I: Сним(а)ться
+  P: Сн(я)ться
+  1: Сним(а)юсь
+  2: Сним(а)ешься
+  6: Сним(а)ются
+Se trouver, se situer:
+  I: Наход(и)ться
+  1: Нахож(у)сь
+  2: Нах(о)дишься
+  6: Нах(о)дятся
+Observer qlqch:
+  I: Наблюд(а)ть за (+Instr)
+  P: Понаблюд(а)ть
+  1: Наблюдаю
+  2: Наблюдаешь
+  6: Наблюдают
+S'amuser:
+  I: Развлек(а)ться
+  P: Развл(е)чься
+  1: Развлек(а)юсь
+  2: Развлек(а)ешься
+  6: Развлек(а)ются
+Décoller, partir par les airs:
+  I: Взлет(а)ть
+  P: Взлет(е)ть
+  1: Взлет(а)ю
+  2: Взлет(а)ешь
+  6: Взлет(а)ют
+Voler au dessus:
+  I: Пролет(а)ть
+  P: Пролет(е)ть
+  1: Прилет(а)ю
+  2: Прилет(а)ешь
+  6: Прилет(а)ют
+Atterir, arriver par les airs:
+  I: Прилет(а)ть
+  P: Прилет(е)ть
+  1: Прилет(а)ю
+  2: Прилет(а)ешь
+  6: Прилет(а)ют
+Sauter:
+  I: Пр(ы)гать
+  P: Пр(ы)гнуть
+  1: Пр(ы)гаю
+  2: Пр(ы)гаешь
+  6: Пр(ы)гнают
+Exploser, faire détoner:
+  I: Взрыв(а)ть
+  P: Взорв(а)ть
+  1: Взрыв(а)ю
+  2: Взрыв(а)ешь
+  6: Взрыв(а)ют
+Périr, mourir par accident:
+  I: Погиб(а)ть
+  P: Пог(и)бнуть
+  1: Погиб(а)ю
+  2: Погиб(а)ешь
+  6: Погиб(а)ют
