--- a/sources/adverbs.yaml
+++ b/sources/adverbs.yaml
@@ -3,7 +3,7 @@ Normalement: Норм(а)льнo
 Bien: Хорош(о)
 Super: Отл(и)чно
 Très: (О)чень
-Aussi: Т(о)же
+Aussi, de même: Т(о)же, Т(а)кже
 Beaucoup: Мн(о)го
 Un peu: Немн(о)го
 Peu: М(а)ло
@@ -56,3 +56,5 @@ Ni: Ни
 Loin de: Далек(о) ot
 Correctement: Молод(е)ц
 Un jour, une fois: Одн(а)жды
+Une nouvelle fois: Сн(о)ва
+Plus tard: П(о)зже
