--- a/sources/verbs.yaml
+++ b/sources/verbs.yaml
@@ -331,9 +331,6 @@ Aller /en transport:
 Mélanger, mixer:
   I: Перем(е)шивать
   P: Перемеш(а)ть
-Corriger:
-  I: Исправл(я)ть
-  P: Испр(а)вить
 Mesurer:
   I: Измер(я)ть
   P: Изм(е)рить
@@ -517,3 +514,27 @@ Périr, mourir par accident:
   1: Погиб(а)ю
   2: Погиб(а)ешь
   6: Погиб(а)ют
+Détruire, démolir:
+  I: Разруш(а)ть
+  P: Разр(у)шить
+  1: Разруш(а)ю
+  2: Разруш(а)ешь
+  6: Разруш(а)ют
+Faire référence à, citer (+acc.):
+  I: Ссыл(а)ться
+  P: Сосл(а)ться
+  1: Ссыл(а)юсь
+  2: Ссыл(а)ется
+  6: Ссыл(а)ются
+Corriger:
+  I: Исправл(я)ть
+  P: Испр(а)вить
+  1: Исправл(я)ю
+  2: Исправл(я)ешь
+  6: Исправл(я)ют
+Essayer:
+  I: Стар(а)ться
+  P: Постар(а)ться
+  1: Стар(а)юсь
+  2: Стар(а)ешься
+  6: Стар(а)ются
