--- a/sources/vocabulary.yaml
+++ b/sources/vocabulary.yaml
@@ -680,3 +680,14 @@ Dos:
   F: Спин(а)
 Tête:
   F: Голо(в)а
+Maire:
+  M: Мэр
+Liberté:
+  F: Своб(о)да
+Titre:
+  N: Загл(а)вие
+Correction, rectification:
+  N: Исправл(е)ние
+  P: Исправл(е)ния
+Faute, erreur:
+  F: Ош(и)бка
