--- a/sources/adverbs.yaml
+++ b/sources/adverbs.yaml
@@ -29,7 +29,7 @@ Pourquoi: Почем(у), Зач(е)м
 Allez!: Дав(а)й
 Avant: Р(а)ньше
 Après, plus tard: Пот(о)м
-Après: П(о)сле
+Après: П(о)сле (+gen.)
 Ici: Здесь, Тут
 Enfin: Након(е)ц
 Dommage: Жаль
