--- a/sources/verbs.yaml
+++ b/sources/verbs.yaml
@@ -538,3 +538,9 @@ Essayer:
   1: Стар(а)юсь
   2: Стар(а)ешься
   6: Стар(а)ются
+Vendre:
+  I: Продав(а)ть
+  P: Прод(а)ть
+  1: Прода(ю)
+  2: Продаёшь
+  6: Прода(ю)т
