add weekly words

--- a/sources/adverbs.yaml
+++ b/sources/adverbs.yaml
@@ -27,7 +27,7 @@ Il n'y a pas longtemps que: Не так давн(о)
 Vite: Б(ы)сtро
 Pourquoi: Почем(у), Зач(е)м
 Allez!: Дав(а)й
-Avant: Р(а)ньше
+Avant, plus tôt: Р(а)ньше
 Après, plus tard: Пот(о)м
 Après: П(о)сле (+gen.)
 Ici: Здесь, Тут
@@ -52,9 +52,12 @@ D'abord, dès le début: Снач(а)ла
 À, jusqu'à, avant: До
 Ago: Наз(а)д
 Dans //x temps: Ч(е)рез
+À travers (un lieux): Ч(е)рез
 Ni: Ни
 Loin de: Далек(о) ot
 Correctement: Молод(е)ц
 Un jour, une fois: Одн(а)жды
 Une nouvelle fois: Сн(о)ва
 Plus tard: П(о)зже
+Ensemble: Вм(е)сте
+Important: В(а)жно
