--- a/sources/sentences.yaml
+++ b/sources/sentences.yaml
@@ -7,7 +7,7 @@ Tu veux du café ?: Б(у)дешь кофе ?
 La langue Russe: Р(у)сский яз(ы)к
 Quel age as tu ?: Ск(о)лько тебе лет
 J'ai froid: Мне х(о)лодно
-J'ai chaud: Мне ж(а)рко
+J'ai chaud: Мне ж(а)рко, Мне тепл(о)
 j'ai peur: Мне стр(а)шно
 Je m'ennuie: Мне ск(у)чно
 J'ai mal: Мне б(о)льно
