--- a/sources/verbs.yaml
+++ b/sources/verbs.yaml
@@ -544,3 +544,27 @@ Vendre:
   1: Прода(ю)
   2: Продаёшь
   6: Прода(ю)т
+Raconter:
+  I: Расск(а)зывать
+  P: Рассказ(а)ть
+  1: Расск(а)зываю
+  2: Расск(а)зываешь
+  6: Расск(а)зывают
+Parler, discuter:
+  I: Разгов(а)ривать
+  P: Разговор(и)ть
+  1: Разгов(а)риваю
+  2: Разгов(а)риваешь
+  6: Разгов(а)ривают
+Aller se coucher:
+  I: Лож(и)ться спать
+  P: Лечь спать
+  1: Лож(у)сь
+  2: Лож(и)шься
+  6: Лож(а)тся
+Plaire, aimer qlqch:
+  I: Нр(а)вится
+  P: Понр(а)виться
+  1: Нр(а)влюсь
+  2: Нр(а)вишься
+  6: Нр(а)вятся
