--- a/sources/vocabulary.yaml
+++ b/sources/vocabulary.yaml
@@ -691,3 +691,13 @@ Correction, rectification:
   P: Исправл(е)ния
 Faute, erreur:
   F: Ош(и)бка
+Fourneau, Poêle:
+  F: Печь
+Affaire, objet, chose:
+  F: Вещь
+Couleur:
+  M: Цвет
+  P: Цвета
+Oiseau:
+  F: Птица
+  P: Птицы
