--- a/sources/other.yaml
+++ b/sources/other.yaml
@@ -4,7 +4,8 @@ Quand: Когд(а)
 Où: Где
 Comment: Как
 Si, à condition: (е)сли
-Voici, voila: Вот
+Voici (proche): Вот
+Voila (loin): Вон
 À propos de quoi: О чём
 À propos de qui: О ком
 Dans: В
@@ -54,3 +55,5 @@ Le même: Один и тот же
 Je suis content que: Я рад что
 Je ne suis pas content que: Я не рад что
 Pendant, durant : В течение (+gen)
+À haute voix: Вслух
+À voix basse: про себ(я)
