--- a/sources/adverbs.yaml
+++ b/sources/adverbs.yaml
@@ -37,7 +37,6 @@ Pas longtemps: Нед(о)лго
 C'est pourquoi: По(э)тому
 Combien: Ск(о)лько
 Quelque: Н(е)сколько
-Tôt: Р(а)но
 D'habitude: Об(ы)чно
 Entre: М(е)жду
 Au dessus: Над
@@ -61,3 +60,6 @@ Une nouvelle fois: Сн(о)ва
 Plus tard: П(о)зже
 Ensemble: Вм(е)сте
 Important: В(а)жно
+Tôt: Р(а)но
+Tard: П(о)здно
+Probablement, surement: Нав(е)рно
