--- a/sources/other.yaml
+++ b/sources/other.yaml
@@ -30,7 +30,7 @@ Tout:
 Rien: Ничег(о)
 Avec: С / Со
 Pour (in order to): Чт(о)бы
-Pour: Для
+Pour: Для (+gen.)
 Quel, lequel: Кот(о)рый, Как(о)й
 Là, là bas: Там
 Ainsi: Так
@@ -57,3 +57,5 @@ Je ne suis pas content que: Я не рад что
 Pendant, durant : В течение (+gen)
 À haute voix: Вслух
 À voix basse: про себ(я)
+Là bas: Туд(а)
+Prés de, à coté de: (О)коло (+gen.)
