--- a/sources/verbs.yaml
+++ b/sources/verbs.yaml
@@ -568,3 +568,15 @@ Plaire, aimer qlqch:
   1: Нр(а)влюсь
   2: Нр(а)вишься
   6: Нр(а)вятся
+Voyager:
+  I: Путеш(е)ствовать
+  P: Попутеш(е)ствовать
+  1: Путеш(е)ствую
+  2: Путеш(е)ствуешь
+  6: Путеш(е)ствуют
+S'appeler:
+  I: Назыв(а)ться
+  P: Назв(а)ться
+  1: Назыв(а)юсь
+  2: Назыв(а)ешься
+  6: Назыв(а)ются
