--- a/sources/other.yaml
+++ b/sources/other.yaml
@@ -59,3 +59,4 @@ Pendant, durant : В течение (+gen)
 À voix basse: про себ(я)
 Là bas: Туд(а)
 Prés de, à coté de: (О)коло (+gen.)
+(Aller) de qlq part à qlq part: От (+gen.) до (+gen.)
