--- a/sources/sentences.yaml
+++ b/sources/sentences.yaml
@@ -21,3 +21,5 @@ Sauter en parachute: Пр(ы)гнуть с парашютом
 Qu'est ce qu'il fait froid !: Как х(о)ладно!
 Je me sens mal: Мне пл(о)хо
 Je suis fatigué: Я уст(а)л
+Un jour sur deux: Ч(е)рез день
+En vélo: На велосип(е)де
