--- a/sources/verbs.yaml
+++ b/sources/verbs.yaml
@@ -580,3 +580,17 @@ S'appeler:
   1: Назыв(а)юсь
   2: Назыв(а)ешься
   6: Назыв(а)ются
+
+
+# Verbes de mouvements !
+# Идти
+# Ехать
+# Бежать
+# Лететь
+# Плыть
+# ------
+# Ходить
+# Ездить
+# Бегать
+# Летать
+# Плавать
