--- a/sources/verbs.yaml
+++ b/sources/verbs.yaml
@@ -478,12 +478,18 @@ S'amuser:
   1: Развлек(а)юсь
   2: Развлек(а)ешься
   6: Развлек(а)ются
-Décoller, partir par les airs:
+Décoller:
   I: Взлет(а)ть
   P: Взлет(е)ть
   1: Взлет(а)ю
   2: Взлет(а)ешь
   6: Взлет(а)ют
+Partir par les airs:   
+  I: Улет(а)ть
+  P: Улет(е)ть
+  1: Улет(а)ю
+  2: Улет(а)ешь
+  6: Улет(а)ют 
 Voler au dessus:
   I: Пролет(а)ть
   P: Пролет(е)ть
@@ -501,7 +507,7 @@ Sauter:
   P: Пр(ы)гнуть
   1: Пр(ы)гаю
   2: Пр(ы)гаешь
-  6: Пр(ы)гнают
+  6: Пр(ы)гают
 Exploser, faire détoner:
   I: Взрыв(а)ть
   P: Взорв(а)ть
@@ -552,7 +558,7 @@ Raconter:
   6: Расск(а)зывают
 Parler, discuter:
   I: Разгов(а)ривать
-  P: Разговор(и)ть
+  P: Поговор(и)ть
   1: Разгов(а)риваю
   2: Разгов(а)риваешь
   6: Разгов(а)ривают
@@ -562,8 +568,8 @@ Aller se coucher:
   1: Лож(у)сь
   2: Лож(и)шься
   6: Лож(а)тся
-Plaire, aimer qlqch:
-  I: Нр(а)вится
+Plaire, aimer qlqch: 
+  I: Нр(а)виться
   P: Понр(а)виться
   1: Нр(а)влюсь
   2: Нр(а)вишься
