--- a/sources/sentences.yaml
+++ b/sources/sentences.yaml
@@ -18,7 +18,7 @@ Chaque matin: По утр(а)м
 Chaque soir: По вечер(а)м
 Bravo!: Молод(е)ц!
 Sauter en parachute: Пр(ы)гнуть с парашютом
-Qu'est ce qu'il fait froid !: Как х(о)ладно!
+Qu'est ce qu'il fait froid !: Как х(о)лодно!
 Je me sens mal: Мне пл(о)хо
 Je suis fatigué: Я уст(а)л
 Un jour sur deux: Ч(е)рез день
