--- a/sources/other.yaml
+++ b/sources/other.yaml
@@ -52,11 +52,11 @@ Pas encore: Пока ещё
 Parce que: Потому что
 Donc: Потому
 Le même: Один и тот же
-Je suis content que: Я рад что
-Je ne suis pas content que: Я не рад что
-Pendant, durant : В течение (+gen)
+Je suis content que: Я рад, что ### virgule :)
+Je ne suis pas content que: Я не рад, что ### virgule :)
+Pendant, durant : В течение / во вр(е)мя (+gen)
 À haute voix: Вслух
-À voix basse: про себ(я)
+À voix basse: про себ(я) ### a voix basse: c'est pas tout a fait ca; "про себя": c'est quand tu lis sans voix du tout, i.e. en silence complete 
 Là bas: Туд(а)
 Prés de, à coté de: (О)коло (+gen.)
 (Aller) de qlq part à qlq part: От (+gen.) до (+gen.)
